force-app/main/default/objects/Product2/fields/Available_Stock__c.field-meta.xml
<CustomField>
    <fullName>Available_Stock__c</fullName>
    <label>Available Stock</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
    <description>Physical stock synced periodically from the ERP (ERP is the source of truth). Available-to-promise = Available_Stock__c - SUM(active reservations), computed at runtime in Phase 2. See ADR-0006.</description>
    <inlineHelpText>Physical stock from ERP (synced). Not the available-to-promise figure.</inlineHelpText>
</CustomField>