force-app/main/default/objects/Product2/fields/ERP_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Product_ID__c</fullName>
    <label>ERP Product ID</label>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>Cross-reference identifier of this product in the ERP. External Id + unique to support idempotent inbound integration (upsert). See ADR-0006.</description>
</CustomField>