force-app/main/default/objects/Product2/fields/Stock_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Stock_Last_Sync__c</fullName>
    <label>Stock Last Sync</label>
    <type>DateTime</type>
    <description>Timestamp of the last stock sync from the ERP. See ADR-0006.</description>
</CustomField>